<resources>
    <string name="app_name">Satellite Maps Driver</string>
    <string name="title_activity_maps">Map</string>
    <string name="New_game">New game</string>
    <string name="Free_game">Free game</string>
    <string name="Settings">Settings</string>
    <string name="Contacts">Contacts</string>
    <string name="Career">Career</string>
    <string name="SelectCar">Select car</string>
    <string name="SelectPlace">Select place</string>
    <string name="Play">Play</string>
    <string name="Custom">Custom</string>

</resources>
