<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_background"
    tools:context="wovilonapps.googlemapsdriver2.MenuActivity">

    <Button
        android:id="@+id/buttonNewGame"
        android:layout_width="235dp"
        android:layout_height="35dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/button_background"
        android:onClick="onBtNewGameCkick"
        android:text="@string/New_game"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp" />

    <Button
        android:id="@+id/buttonFreeGame"
        android:layout_width="235dp"
        android:layout_height="35dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_background"
        android:onClick="onBtFreeGameClick"
        android:text="@string/Free_game"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/buttonNewGame"
        app:layout_constraintRight_toRightOf="@+id/buttonNewGame"
        app:layout_constraintTop_toBottomOf="@+id/buttonNewGame" />

    <Button
        android:id="@+id/buttonSettings"
        android:layout_width="235dp"
        android:layout_height="35dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_background"
        android:text="@string/Settings"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/buttonFreeGame"
        app:layout_constraintRight_toRightOf="@+id/buttonFreeGame"
        app:layout_constraintTop_toBottomOf="@+id/buttonFreeGame" />

    <Button
        android:id="@+id/buttonAbout"
        android:layout_width="235dp"
        android:layout_height="35dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_background"
        android:text="@string/Contacts"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/buttonSettings"
        app:layout_constraintRight_toRightOf="@+id/buttonSettings"
        app:layout_constraintTop_toBottomOf="@+id/buttonSettings" />
</android.support.constraint.ConstraintLayout>
